--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "fs-extra": "^1.0.0",
+    "number-to-first-letter": "git+https://github.com/Silvestr-b/number-to-first-letter.git",
     "postcss": "^5.2.8"
   },
   "devDependencies": {
